# cpm-entity-system

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
entity-system/: BaseSystem.hpp  ContainerMapInterface.cpp  ContainerMapInterface.hpp  CoreInt.cpp  CoreInt.hpp  ESCore.cpp  ESCore.hpp  ESCoreBase.cpp  ESCoreBase.hpp  EmptySystem.hpp  GenericSystem.hpp
entity-system/src/: BaseComponentContainer.hpp  BaseSystem.hpp  ComponentContainer.hpp  ComponentGroup.hpp  EmptyComponentContainer.hpp  SpecificSystem.hpp  TemplateID.cpp  TemplateID.hpp
tests/: CMakeLists.txt  TestComponentValidate.cpp  TestConsDes.cpp  TestDuplicateComp.cpp  TestGS.cpp  TestGSGetName.cpp  TestGSModMultiRandDynGroup.cpp  TestGSMultiRand.cpp  TestGSMultiRandDyn.cpp  TestGSMultiRandDynGroupRec.cpp  TestGSMultiRandDynGrouped.cpp  TestGSRand.cpp  TestGSSerialize.cpp  TestGSWalkEntity.cpp  TestGrouped.cpp  TestMultiComp.cpp  TestMultiOptOnlyStatic.cpp  TestMultiOptOnlyStaticGroup.cpp  TestMultiOptStatic.cpp  TestMultiOptStaticGroup.cpp  TestMultiOptional.cpp  TestOptional.cpp  TestOptionalAllOptional.cpp  TestStaticOnly.cpp  TestStaticOnlyGroup.cpp  TestWalkCallback.cpp  main.cpp  run-tests.sh  until-fail-test.sh
tests/emscripten/: CMakeLists.txt  TestGS.cpp  TestGS.hpp  main.cpp  run-tests.sh
